Fix card text-align property

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -171,7 +171,7 @@ small, li {
     font-size: 1rem;
     line-height: 1.5;
     text-indent: 0;
-    text-align: center;
+    text-align: justify;
     margin: 0.5rem 0 0;
 }
 
